Updated memory blog
Memory blog pass #1
Fixed memory re-allocation
Updated toList() for streams